# Master_GraphicEngine_Subject

./: .gitignore  CMakeLists.txt  README.md
activities/OPT01/: 02.ReadAll.cpp  03.Door.cpp  04.MovePeople.cpp  05.MemoryProblems.cpp
include/engine/: camera.hpp  engine.hpp  gameObject.hpp  gpu.hpp  gpuModels.hpp  material.hpp  object.hpp
include/engine/components/: cameraComponent.hpp  cameraInputComponent.hpp  component.hpp  geometryComponent.hpp  graphicComponent.hpp  inputComponent.hpp  lightComponent.hpp  renderComponent.hpp  transformComponent.hpp
include/engine/components/geometryComponent/: cube.hpp  quad.hpp  sphere.hpp  teapot.hpp
include/engine/components/lightComponent/: directionalLightComponent.hpp  pointLightComponent.hpp  spotLightComponent.hpp
include/engine/components/renderComponent/: uiTextComponent.hpp
include/engine/defaultObjects/: ball.hpp  bar.hpp  camera.hpp  cube.hpp  quad.hpp  sphere.hpp  teapot.hpp  wall.hpp
include/engine/defaultObjects/bricks/: brick.hpp  simpleBrick.hpp
include/engine/defaultObjects/models/: generator.hpp  player.hpp  spaceship1.hpp  spaceship2.hpp
include/engine/defaultObjects/ui/: uiObject.hpp
include/engine/fbo/: shadow.hpp
include/engine/geometry/: cube.hpp  plane.hpp
include/engine/handle/: handle.hpp  handleManager.hpp
include/engine/light/: directionalLight.hpp  light.hpp  pointLight.hpp  spotLight.hpp
include/engine/managers/: componentManager.hpp  gameObjectManager.hpp
include/engine/systems/: cameraSystem.hpp  geometrySystem.hpp  graphicSystem.hpp  lightSystem.hpp  renderSystem.hpp  system.hpp  transformSystem.hpp
projects/EJ02_01/: main.cpp
projects/EJ02_02/: main.cpp
projects/EJ02_03/: main.cpp
projects/EJ02_04/: main.cpp
projects/EJ02_05/: main.cpp
projects/EJ02_06/: main.cpp
projects/EJ03_01/: main.cpp  vertex.vs
projects/EJ03_02/: main.cpp
projects/EJ03_03/: main.cpp  vertex.vs
projects/EJ03_04/: fragment.fs  main.cpp  vertex.vs
projects/EJ04_01/: fragment.fs  main.cpp  vertex.vs
projects/EJ04_02/: fragment.fs  main.cpp
projects/EJ04_03/: main.cpp
projects/EJ04_04/: main.cpp
projects/EJ04_05/: fragment.fs  main.cpp
projects/EJ05_01/: main.cpp
projects/EJ05_02/: main.cpp
projects/EJ05_03/: main.cpp  vertex.vs
projects/EJ05_04/: main.cpp
projects/EJ06_01/: main.cpp
projects/EJ06_02/: main.cpp
projects/EJ07_01/: main.cpp
projects/EJ07_02/: main.cpp
projects/EJ07_03/: main.cpp  phong.vs
projects/EJ07_04/: blinn.fs  main.cpp
projects/EJ07_05/: flat.fs  flat.vs  gourand.vs  main.cpp
projects/EJ08_01/: main.cpp
projects/EJ08_02/: main.cpp
projects/EJ08_03/: blinn.fs
projects/EJ08_04/: blinn.fs  main.cpp
projects/EJ08_05/: main.cpp
projects/EJ09_01/: blinn.fs  main.cpp
projects/EJ09_02/: blinn.fs  main.cpp
projects/EJ09_03/: blinn.fs  main.cpp
projects/EJ09_04/: blinn.fs  main.cpp
projects/EJ10_01/: main.cpp  simple.fs  simple.vs
projects/EJ11_01/: main.cpp
projects/EJ11_02/: main.cpp
projects/EJ11_03/: main.cpp
projects/EJ11_04/: main.cpp
projects/EJ12_01/: main.cpp  normal.fs  normal.vs
projects/EJ12_02/: main.cpp
projects/EJ13_01/: blinn.fs  fbo.vs  main.cpp
projects/EJ13_02/: fbo.fs  main.cpp
projects/EJ13_03/: fbo.fs  main.cpp
projects/EJ14_01/: blinn.fs  light.fs  main.cpp
projects/EJ14_02/: main.cpp  phong.vs
projects/FINAL/: main.cpp
src/engine/: camera.cpp  engine.cpp  fbo.cpp  gameObject.cpp  gpu.cpp  gpuModels.cpp  material.cpp  object.cpp  window.cpp
src/engine/components/: cameraComponent.cpp  cameraInputComponent.cpp  component.cpp  geometryComponent.cpp  graphicComponent.cpp  lightComponent.cpp  renderComponent.cpp  transformComponent.cpp
src/engine/components/geometryComponent/: cube.cpp  quad.cpp  sphere.cpp  teapot.cpp
src/engine/components/lightComponent/: directionalLightComponent.cpp  pointLightComponent.cpp  spotLightComponent.cpp
src/engine/components/renderComponent/: cubeComponent.cpp  quadComponent.cpp  sphereComponent.cpp  teapotComponent.cpp  uiTextComponent.cpp
src/engine/defaultObjects/: ball.cpp  bar.cpp  brick.cpp  camera.cpp  cube.cpp  pointLight.cpp  quad.cpp  sphere.cpp  teapot.cpp  wall.cpp
src/engine/defaultObjects/bricks/: brick.cpp  simpleBrick.cpp
src/engine/defaultObjects/models/: generator.cpp
src/engine/defaultObjects/ui/: uiObject.cpp
src/engine/fbo/: shadow.cpp
src/engine/geometry/: cube.cpp  geometry.cpp  plane.cpp
src/engine/handle/: handleManager.cpp
src/engine/light/: directionalLight.cpp  light.cpp  pointLight.cpp  spotLight.cpp
src/engine/managers/: componentManager.cpp  gameObjectManager.cpp
src/engine/systems/: cameraSystem.cpp  geometrySystem.cpp  graphicSystem.cpp  inputSystem.cpp  lightSystem.cpp  physicSystem.cpp  renderSystem.cpp  system.cpp  transformSystem.cpp
src/engine/systems/shaders/: blinn.fs  blinn.vs  depth.fs  ui.vs
